; ModuleID = '/home/carl/AnghaBench/macvim/src/extr_uninstal.c_confirm.c'
source_filename = "/home/carl/AnghaBench/macvim/src/extr_uninstal.c_confirm.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stdout = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [4 x i8] c" %c\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @confirm to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @confirm() #0 {
  %1 = alloca [10 x i8], align 1
  %2 = load i32, i32* @stdout, align 4
  %3 = call i32 @fflush(i32 %2)
  %4 = getelementptr inbounds [10 x i8], [10 x i8]* %1, i64 0, i64 0
  %5 = call i32 @scanf(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i8* %4)
  %6 = icmp eq i32 %5, 1
  br i1 %6, label %7, label %13

7:                                                ; preds = %0
  %8 = getelementptr inbounds [10 x i8], [10 x i8]* %1, i64 0, i64 0
  %9 = load i8, i8* %8, align 1
  %10 = call signext i8 @toupper(i8 signext %9)
  %11 = sext i8 %10 to i32
  %12 = icmp eq i32 %11, 89
  br label %13

13:                                               ; preds = %7, %0
  %14 = phi i1 [ false, %0 ], [ %12, %7 ]
  %15 = zext i1 %14 to i32
  ret i32 %15
}

declare dso_local i32 @fflush(i32) #1

declare dso_local i32 @scanf(i8*, i8*) #1

declare dso_local signext i8 @toupper(i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
